main.tf
resource "aws_vpc" "main" {
    cidr_block = var.aws_vpc_main_cidr

    tags =  {
        Name = "main-vpc"
    }
  
}
